Closed Bug 238578 Opened 20 years ago Closed 20 years ago

Mismatched PR_MALLOC and free in os2poll.c

Categories

(NSPR :: NSPR, defect)

4.4.1
x86
OS/2
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: wtc, Assigned: wtc)

Details

Attachments

(1 file)

In os2poll.c, function _PR_MD_PR_POLL, the int array
'socks' is allocated with NSPR's PR_MALLOC(), but is
freed with Standard C library's free().  This is a
mismatch of allocation and deallocation functions.
Attached patch Proposed patchSplinter Review
Use PR_Free instead of free.
Attachment #144706 - Flags: review?(pkw)
Comment on attachment 144706 [details] [diff] [review]
Proposed patch

r=mkaply

Nice catch
a=mkaply for checkin if it mattersfor NSPR
Attachment #144706 - Flags: review?(pkw)
Attachment #144706 - Flags: review+
Attachment #144706 - Flags: approval1.7+
Patch checked in on the NSPR trunk (NSPR 4.5) and
NSPRPUB_PRE_4_2_CLIENT_BRANCH (Mozilla 1.7 final).
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Target Milestone: --- → 4.5
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: