Bugzilla bug 238578: memory allocated with PR_MALLOC() should not be freed with free().  r=mkaply.